Integración Google Analytics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <link href="css/bootstrap-custom.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
+<meta name="Description" content="Sitio de Engage Business sobre un Theme relacionado a HTML/CSS para la clase de Diseño Web I.">
+<meta name="Keywords" content="theme business, business, engage business, theme engage business, theme html, theme">
+	
 </head>
 
 <body>
@@ -275,6 +278,14 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MSN11M1LB"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-6MSN11M1LB');
+	</script>
 	
 </body>
 </html>
