--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,10 @@
 <link href="css/bootstrap-custom.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
+	
+<meta name="Description" content="Página de contacto para el sitio de Engage, enviar mensaje por medio de formlario web.">
+<meta name="Keywords" content="contact engage business, contact engage, page contact, engage business, theme engage business, theme html, theme">
+	
 </head>
 
 <body>
@@ -174,7 +178,14 @@
 	<script src="js/bootstrap.min.js"></script>
 	
 	
-	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MSN11M1LB"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-6MSN11M1LB');
+	</script>
 	
 </body>
 </html>
